--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="grid">
             <section>
                 <hgroup>
-                    <h2>Мы цифровое агенство</h2>
+                    <h2>Цифровое агенство интеллектуальных прав</h2>
                     <h3>Издатбюро</h3>
                 </hgroup>
                 <p>Мы работаем с авторами графических и текстовых произведений в новой реальности. Мы делаем доступными произведения зарубежных авторов для потребителей на Российском рынке и наоборот.</p>
