--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <h2>Цифровое агенство интеллектуальных прав</h2>
                     <h3>Издатбюро</h3>
                 </hgroup>
-                <p>Мы работаем с авторами графических и текстовых произведений в новой реальности. Мы делаем доступными произведения зарубежных авторов для потребителей на Российском рынке и наоборот.</p>
+                <p>Работаем с авторами текстовых и графических произведений в новой реальности. Мы делаем доступными произведения зарубежных авторов для потребителей на Российском рынке и наоборот.</p>
                 <button class="button">Написать нам</button>
             </section>
         </div>
