--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         </ul>
         <ul>
             <li><a href="#">Главная</a></li>
-            <li><a href="#">О нас</a></li>
-            <li><a href="#" role="button">Контакты</a></li>
+            <li><a href="/about.html">О нас</a></li>
+            <li><a href="/contact.html" role="button">Контакты</a></li>
         </ul>
     </nav>
     <main class="container">
