--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,8 @@
         </ul>
         <ul>
             <li><a href="/index.html">Главная</a></li>
-            <li><a href="#">О нас</a></li>
-            <li><a href="#" role="button">Контакты</a></li>
+            <li><a href="/about.html">О нас</a></li>
+            <li><a href="/contact.html" role="button">Контакты</a></li>
         </ul>
     </nav>
     <main class="container">
