--- a/about.html
+++ b/about.html
@@ -11,6 +11,12 @@
             color: white;
             font-family: 'Arial', sans-serif;
         }
+             .principle-box {
+            border: 2px solid rgb(16, 149, 193);
+            border-radius: 10px;
+            padding: 20px;
+            margin: 20px 0;
+        }
     </style>
 </head>
 <body>
